envoy/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg
  annotations:
    cert-manager.io/cluster-issuer: cert-manager-global
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      allowedRoutes:
            namespaces:
              from: All        
      protocol: HTTP
      port: 80
    - name: tcp
      protocol: TCP
      port: 8089
      allowedRoutes:
        kinds:
        - kind: TCPRoute  
    - name: https
      protocol: HTTPS
      hostname: "*.s.net-chain.xyz"
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
        - kind: Secret
          name: eg-https
